# EduClaw

./: .env.example  .gitignore  AI_DISCLOSURE.md  EduClaw_Master_Document.md  README.md  RVCE_EduClaw.pptx  context.md  docker-compose.yml
gateway/: Dockerfile  package.json  pnpm-lock.yaml
gateway/src/: index.ts
gateway/src/adapters/: telegram.ts
gateway/src/types/: MessageEnvelope.ts
pi-engine/: HEARTBEAT.md  SOUL.md
pi-engine/skills/: skill_calendar_watch.md  skill_instructor_report.md  skill_meeting_scribe.md  skill_pdf_digest.md  skill_quiz_gen.md
scripts/: seed_demo_data.py
skills-runtime/: Dockerfile  main.py  pyproject.toml
skills-runtime/calendar_watch/: __init__.py  watch.py
skills-runtime/data/memory/courses/networks_2024/: kb.yaml  schedule.yaml
skills-runtime/data/memory/students/: telegram_100001.yaml  telegram_100002.yaml  telegram_100003.yaml  telegram_100004.yaml  telegram_100005.yaml
skills-runtime/instructor_report/: __init__.py  generate_docx.py
skills-runtime/meeting_scribe/: __init__.py
skills-runtime/pdf_digest/: __init__.py  ingest.py  watcher.py
skills-runtime/quiz_gen/: __init__.py  generate.py
skills-runtime/utils/: __init__.py  logger.py  sanitise.py  yaml_io.py
