[project]
name = "educlaw-skills"
version = "1.0.0"
description = "EduClaw Skills Runtime - Python skill execution engine"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["utils*", "pdf_digest*", "quiz_gen*", "calendar_watch*", "instructor_report*", "meeting_scribe*"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "openai>=1.40.0",
    "pyyaml>=6.0",
    "python-docx>=1.1.0",
    "watchdog>=5.0.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest-cov>=5.0.0",
]
email = [
    "sendgrid>=6.11.0",
]
ocr = [
    "pytesseract>=0.3.10",
]
